src/test/ui/imports/glob-conflict-cross-crate.stderr
error[E0425]: cannot find function `f` in module `glob_conflict`
  --> $DIR/glob-conflict-cross-crate.rs:6:20
   |
LL |     glob_conflict::f(); //~ ERROR cannot find function `f` in module `glob_conflict`
   |                    ^ not found in `glob_conflict`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
